@@ -20,6 +20,8 @@ Version 2.1.3
         still present multiple times in the code; added this to TODO file;
 	thanks to David Mosberger for reporting this bug
    - Added David Mosberger to contributors
+   - Bugfix: Corrected string length types in "src/decoding.cc" and
+        "src/decoding.h" (64bit)
 
 Version 2.1.2		2005-03-26 17:28
  * Robert Sowada
